--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="visit-signin">
 
 <div class="visit-global">
-	<p>	Visit global1.com</p>
+	<p>	Visit globalfuncity.com</p>
 </div>	
 
 <div class="sign-in">
@@ -258,7 +258,7 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	</div>
 	<hr>
 	<div class="copyright">
-	<p> &#169; Global Fun City, All rights Reserved.
+	<p>Global Fun City &#169; 2022. All rights Reserved.
         <br>Site designed by Vignesh.in</p>
 	</div>
 </footer>
