--- a/pages/footer other pages/csrinitiatives.html
+++ b/pages/footer other pages/csrinitiatives.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset='UTF-8'>
-	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title>CSR Initiatives - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/footer other pages css/csrinitiatives.css" />
@@ -21,8 +21,64 @@
 </head>
 <body>
 
-<div class="logo">
-	<img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo"/>
+	<div class="visit-signin">
+
+		<div class="visit-global">
+			<p>	Visit global1.com</p>
+		</div>	
+		
+		<div class="sign-in">
+			
+    <p><a href="../../pages/signup for booking/signup.html"> Sign In </a>| <a href="../signup for booking/create-an-account.html"> Create Account</a> | <i class="fa-solid fa-globe"></i> United states (English)</p>
+		</div>
+		
+	</div>
+
+<div class="header" >
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a class="navigation__link" href="../../index.html">HOME</a>
+	 	<a class="active" href="../../pages/other pages/home.html"> ABOUT</a>
+	 	<a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> 
+		<a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> 
+	  	<a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> 
+		<a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> 
+ 		<a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
+	 	<a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT </a>
+		<hr>
+		<a href="../signup for booking/signup.html">BOOK TICKETS</a>
+		<hr>
+		<a href="../../pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
+		<a href="../../pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
+		<a href="../../pages/footer other pages/greeninitiatives.html">Green Initiatives</a>
+		<a href="../../pages/footer other pages/csrinitiatives.html">CSR Initiatives</a>
+		<hr>
+		<a href="../../pages/signup for booking/signup.html">Sign In</a> 
+	  </div>
+	<div class="icon-bar">
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+	</div>
+
+<a href="../../index.html">
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
+</a>
+   	 <nav class="navbar">
+	 <ul>
+     <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
+  	 <li> <a class="navigation__link" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
+	 
+	 </ul>
+
+	 </nav>
+     <div>
+        <a href="../../pages/other pages/booknow.html"><button style="color: white;"> <b>  BOOK NOW </b> </button> </a>
+</div>
 </div>
 
 <div class="background-color"><!--background-->
@@ -56,7 +112,7 @@
 	<p> <b> <g> From the Director’s Desk- </g> </b> <br> <br>
 	    Global Fun City, one of the biggest Amusement parks in United States of America. <br>
 		<br>
-		As one of the successful growing entertainment industry in USA, I as a director of the company understand the importance of Corporate social responsibility. I believe that business should operate in such a manner that it meets or exceeds the ethical, legal, commercial, public expectations that society has towards us We aim to resolve specific issues by supporting & improving conditions of our employees, shareholders, communities, and environment. But we also believe that moral responsibility goes further, reflecting the need for corporations to address fundamental ethical issues such as inclusion, dignity, and equality. The business should not only be about money. It should be about responsibility towards human development. It should be about public good, not just private good. I would like to thank our long standing guests for all their support and love, also looking forward to welcome our new guests. Hope we can make it a memorable experience for you and your family.
+		As one of the successful growing entertainment industry in USA, I as a director of the company understand the importance of Corporate social responsibility. I believe that business should operate in such a manner that it meets or exceeds the ethical, legal, commercial, public expectations that society has towards us. We aim to resolve specific issues by supporting & improving conditions of our employees, shareholders, communities, and environment. But we also believe that moral responsibility goes further, reflecting the need for corporations to address fundamental ethical issues such as inclusion, dignity, and equality. The business should not only be about money. It should be about responsibility towards human development. It should be about public good, not just private good. I would like to thank our long standing guests for all their support and love, also looking forward to welcome our new guests. Hope we can make it a memorable experience for you and your family.
 		 <br>Last but not the least I would like to say -<g> Be The Peace You Wish To See In The World! </g>
 		<br>
 		<g>Thank you for your time.</g></p> 
@@ -126,11 +182,11 @@
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../footer pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../footer pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../footer pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../footer pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../footer pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
