--- a/pages/nav_pages_for_user_profile_book/contact_user_profile.html
+++ b/pages/nav_pages_for_user_profile_book/contact_user_profile.html
@@ -73,15 +73,15 @@ info@globalfuncity.com
 
 <div class="gape">
 	<div class="part1">
-	<i class="fa-solid fa-user"> <input type="text" placeholder="Name" required/> </i> &nbsp;
-	<i class="fa-solid fa-phone"> <input type="tel" placeholder="Phone" required/> </i>
+	<i class="fa-solid fa-user"> <input class="input-field-for-contact" type="text" placeholder="Name" required/> </i> &nbsp;
+	<i class="fa-solid fa-phone"> <input class="input-field-for-contact" type="tel" placeholder="Phone" required/> </i>
 	</div>
 	<div class="part2">
-		<i class="fa-solid fa-envelope"><input type="email" placeholder="Email Address" required/></i> &nbsp; &nbsp;
-		<i class="fa-solid fa-info"><input type="text" placeholder="Subject" required/> </i>
+		<i class="fa-solid fa-envelope"><input class="input-field-for-contact" type="email" placeholder="Email Address" required/></i> &nbsp; &nbsp;
+		<i class="fa-solid fa-info"><input class="input-field-for-contact" type="text" placeholder="Subject" required/> </i>
 	</div>
 	<div class="part3">
-		<i class="fa-solid fa-pen"><input type="text" placeholder="How can you help you? Feel free to get in touch!" required/> </i>
+		<i class="fa-solid fa-pen"><input class="input-field-for-contact" type="text" placeholder="How can I help you? Feel free to get in touch!" required/> </i>
     </div>
 </div>
 </section>
