--- a/pages/nav_pages_for_user_profile_book/events_user_profile.html
+++ b/pages/nav_pages_for_user_profile_book/events_user_profile.html
@@ -54,7 +54,7 @@
 
 	 </nav>
 	 <div>
-	 	 <a href="../../pages/other pages/booknow.html"><button> <b>BOOK NOW </b> </button> </a>
+	 	 <a href="../../pages/other pages/booknow.html"><button class="btn-book-now"> <b>BOOK NOW </b> </button> </a>
 </div>
 </div>
 
