--- a/pages/nav_pages_for_user_profile_book/ticketprices_user_profile.html
+++ b/pages/nav_pages_for_user_profile_book/ticketprices_user_profile.html
@@ -60,7 +60,7 @@
 
 
 <video autoplay="false" loop muted plays-inline class="back-video">
-	  <source src="../../assets/images/aquapark video.mp4"  type="video/mp4">
+	  <source src="../../assets/videos/aquapark video.mp4"  type="video/mp4">
 </video>
 
 </div>
