--- a/pages/other pages/offer.html
+++ b/pages/other pages/offer.html
@@ -305,7 +305,7 @@ card_offer.setAttribute("class", "card");
 console.log(card_offer);
 
 let a = document.createElement("a");
-a.setAttribute("href", "../../pages/offer packages/newyear.html");
+a.setAttribute("href", "http://127.0.0.1:5500/pages/offer%20packages/newyear.html?offerslist=" +offer_details[i]["offer_uuid"]);
 card_offer.append(a);
 
 let img_of_newyear = document.createElement("img");
