--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -131,11 +131,11 @@
 <section class="get-updates">
 	<h1>Want to Get Updates?</h1>
 	<div class="email-address">
-    <input type="text" placeholder="Enter Your Email Address">
-	<a href="../../pages/other pages/getintouch.html"> <button><i class="fa-regular fa-paper-plane"></i> Subscribe</button> </a>
+    <input type="text" placeholder="Enter Your Email Address" required>
+	<a href="#"> <button><i class="fa-regular fa-paper-plane"></i> Subscribe</button> </a>
 	</div>
 	<div class="privacypolicy">
-	<input type="radio" id="agree">	
+	<input type="radio" id="agree" required>	
 	<label for="agree">I agree to the <a href="../../pages/footer other pages/privacypolicy.html" target="_blank">Privacy Policy</label> </a>
 	</div>
 </section>
