--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -47,7 +47,7 @@
 	<div class="status">
 		<h3>Status</h3>
 		<p>Delivery expected by Jan 01 2023</p>
-		<a href="../../pages/signup for shopping/profile-shopping.html"> <button class="btn-cancel">Check Your Orders</button></a>
+		<a href="../../pages/homepage/main.profile.html"> <button class="btn-cancel">Check Your Orders</button></a>
 		<a href="../../pages/shop/shop.html"> <button class="btn-cancel">Cancel Order</button></a>
 	</div>
 </div>
