--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -28,7 +28,7 @@
 
 <div class="icons-info">
 	<a href="../../index.html"><i class="fa-sharp fa-solid fa-house"></i> &nbsp; Back to Home </a> &nbsp;
-	<a href=""><i class="fa-solid fa-phone"></i> &nbsp; Contact </a> 
+	<a href="../../pages/other pages/contact.html"><i class="fa-solid fa-phone"></i> &nbsp; Contact </a> 
 	<a href=""><i class="fa-brands fa-cc-visa"></i> &nbsp; Global Visa Card </a>
 </div>	
 
@@ -37,7 +37,7 @@
 </div>
 
 <div class="icons-info">
-	<a href="../../pages/signup for shopping/signup_shop.html"> <i class="fa-solid fa-user"></i> &nbsp; Sign In | Sign Up </a> &nbsp;
+	<a href="../../pages/signup for booking/signup.html"> <i class="fa-solid fa-user"></i> &nbsp; Sign In | Sign Up </a> &nbsp;
 	<a href=""> <i class="fa-solid fa-heart"></i> &nbsp; My Wishlist (2)</a> &nbsp;
 	<a href="../../pages/shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (2)</a>
 </div>
@@ -189,7 +189,7 @@
 
 <div class="images-of-person">
 	<img src="../../assets/images/images_in_shop_index/young-arab-man-wearing-casual-white-t-shirt-clueless-confused-expression-arms-hands-raised-young-arab-man-wearing-226904804-transformed.jpg" width="" alt="t-shirt"/>
-	<img src="../../assets/images/images_in_shop_index/man-wearing-black-cap-min.jpg" width="" alt="hat"/>
+	<img src="../../assets/images/images_in_shop_index/Mens_caps.jpg" width="" alt="hat"/>
 </div>
 
 <div class="trending">
@@ -209,17 +209,17 @@
 <div class="circle-2">
 	<div class="circle-all-2">
 		<h2>Clothing</h2>
-		<a href="">Shop Now </a>
+		<a href="../../pages/shop/clothing.html">Shop Now </a>
 	</div>
 
 	<div class="circle-all-2">
 		<h2>Accessories</h2>
-		<a href="">Shop Now</a>
+		<a href="../../pages/shop/accessories.html">Shop Now</a>
 	</div>
 
 	<div class="circle-all-2">
 		<h2>Home</h2>
-		<a href="">Shop Now</a>
+		<a href="../../pages/shop/home.html">Shop Now</a>
 	</div>
 </div>
 
@@ -240,7 +240,7 @@
 
 
 
-<div class="background-for-contact">
+<div class="background-for-contact" style="display: none;">
 <div class="contact-us">
 	<h2>C O N T A C T  U S  </h2>
 	<h1>Get in Touch </h1>
@@ -271,7 +271,7 @@
 	</div>
 
 
-<div class="address-open-hours-contact">	
+<div class="address-open-hours-contact" style="display: none;">	
 <div class="address">
 	<h3>Location</h3>
 	<p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
@@ -313,11 +313,11 @@
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../pages/footer other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
