--- a/pages/signup for booking/create-an-account.html
+++ b/pages/signup for booking/create-an-account.html
@@ -38,7 +38,7 @@
             title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters"  required="true" /> &nbsp;
             <input type="password" id="re_enter_password" placeholder="Re-Enter Password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
             title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters" required="true"  /> &nbsp;
-            <input onfocus="(this.type = 'date')" id="date" placeholder="Date of Birth" required="true" min="2023-01-01" max="2023-12-31"/>
+            <input onfocus="(this.type = 'date')" id="date" placeholder="Date of Birth" required="true"/>
    
     </div> 
     &nbsp;     
