--- a/pages/footer other pages/greeninitiatives.html
+++ b/pages/footer other pages/greeninitiatives.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='UTF-8'>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title>Green Initiatives - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/footer other pages css/greeninitiatives.css" />
@@ -21,8 +21,45 @@
 </head>
 <body>
 
+	<div class="visit-signin">
+
+		<div class="visit-global">
+			<p>	Visit global1.com</p>
+		</div>	
+		
+		<div class="sign-in">
+			
+    <p><a href="../../pages/signup for booking/signup.html"> Sign In </a>| <a href="../signup for booking/create-an-account.html"> Create Account</a> | <i class="fa-solid fa-globe"></i> United states (English)</p>
+		</div>
+		
+	</div>
+
 <div class="header" >
-<a href="../../index.html" >
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a class="navigation__link" href="../../index.html">HOME</a>
+	 	<a class="active" href="../../pages/other pages/home.html"> ABOUT</a>
+	 	<a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> 
+		<a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> 
+	  	<a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> 
+		<a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> 
+ 		<a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> 
+	 	<a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT </a>
+		<hr>
+		<a href="../signup for booking/signup.html">BOOK TICKETS</a>
+		<hr>
+		<a href="../../pages/footer other pages/safetyofvisitors.html">Safety of visitors</a>
+		<a href="../../pages/footer other pages/rulesandregulations.html">Rules & Regulations</a>
+		<a href="../../pages/footer other pages/greeninitiatives.html">Green Initiatives</a>
+		<a href="../../pages/footer other pages/csrinitiatives.html">CSR Initiatives</a>
+		<hr>
+		<a href="../../pages/signup for booking/signup.html">Sign In</a> 
+	  </div>
+	<div class="icon-bar">
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+	</div>
+
+<a href="../../index.html">
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
@@ -40,7 +77,7 @@
 
 	 </nav>
      <div>
-        <a href="../../pages/other pages/booknow.html"><button> <b>  BOOK NOW </b> </button> </a>
+        <a href="../../pages/other pages/booknow.html"><button style="color: white;"> <b>  BOOK NOW </b> </button> </a>
 </div>
 </div>
 <div class="background-color"><!--background-->
@@ -119,11 +156,11 @@
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../pages/footer other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
