--- a/pages/offer packages/newyear.html
+++ b/pages/offer packages/newyear.html
@@ -189,11 +189,11 @@
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../pages/footer other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/footer other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
@@ -230,6 +230,14 @@
 </footer>
 
 <script>
+// Data get from Url Params
+
+const OfferUniqueID = new URLSearchParams(window.location.search).get("offerslist")
+
+let offer_details = JSON.parse(localStorage.getItem('offer_details'));
+
+const getOfferData = offer_details.find(data =>
+data.offer_uuid === OfferUniqueID);
 
 // Create a div element with class name "book"
 const bookDiv = document.createElement("div");
@@ -237,7 +245,7 @@ bookDiv.className = "book";
 
 // Create a paragraph element and add it to the bookDiv
 const bookPara = document.createElement("p");
-bookPara.textContent = "New Year at Global Fun City";
+bookPara.textContent = getOfferData["offer_name"];
 bookDiv.appendChild(bookPara);
 
 // Create a div element with class name "newyear"
@@ -246,14 +254,14 @@ newYearDiv.className = "newyear";
 
 // Create an image element and add it to the newYearDiv
 const newYearImg = document.createElement("img");
-newYearImg.src = "../../assets/images/newyear.jpg";
-newYearImg.alt = "new-year-image";
+newYearImg.src = getOfferData["offer_image"];
+newYearImg.alt = getOfferData["offer_name"];
 newYearImg.className = "new-year-photo-offer";
 newYearDiv.appendChild(newYearImg);
 
 // Create a paragraph element and add it to the newYearDiv
 const newYearPara = document.createElement("p");
-newYearPara.textContent = "The new year party is one of the things that we all wait for every year, and one of the most sought-after venues for such parties is Global Fun City. This New Year’s Eve, head to Global Fun City Resort and be part of the most amazing New Year party in town. It will be a fun-filled night with an exclusive DJ performance by DJ Montez from California with a gala dinner, unlimited cocktails and stunning fireworks. You can also find a kid's zone here, making it a favourite place for people with children. The Package includes a night stay at the Resort with breakfast, a Fastrack ticket to the Amusement park, and entry to the New year Celebration. You could join the party all night, or stay back for the night";
+newYearPara.textContent = getOfferData["offer_about"];
 newYearDiv.appendChild(newYearPara);
 
 // Create a div element with class name "instructions-for-offer"
@@ -268,7 +276,7 @@ instructionsDiv.appendChild(conDiv);
 
 // Create a paragraph element and add it to the conDiv
 const conPara = document.createElement("p");
-conPara.textContent = "New Year Celebration with Stay and Park Tickets";
+conPara.textContent = "Book your offer & Enjoy!";
 conDiv.appendChild(conPara);
 
 // Create an unordered list and add it to the conDiv
@@ -277,20 +285,20 @@ conDiv.appendChild(conList);
 
 // Create list items and add them to the conList
 const conListItem1 = document.createElement("li");
-conListItem1.textContent = "Executive or Deluxe Room";
+conListItem1.textContent = getOfferData["offer_room"];
 conList.appendChild(conListItem1);
 
 const conListItem2 = document.createElement("li");
-conListItem2.textContent = "Price: $800 + Taxes per Couple";
+conListItem2.textContent = getOfferData["offer_price_for_children"];
 conList.appendChild(conListItem2);
 
 const conListItem3 = document.createElement("li");
-conListItem3.textContent = "Child between the ages of 5 and 11 years - $500";
+conListItem3.textContent = getOfferData["offer_price_for_adult"];
 conList.appendChild(conListItem3);
 
-const conListItem4 = document.createElement("li");
-conListItem4.textContent = "Child 12 years & above and extra-person - $600 ";
-conList.appendChild(conListItem4);
+// const conListItem4 = document.createElement("li");
+// conListItem4.textContent = "Child 12 years & above and extra-person - $600 ";
+// conList.appendChild(conListItem4);
 
 
 // Create a paragraph element and add it to the conDiv
@@ -304,20 +312,20 @@ conDiv.appendChild(conInclusionsList);
 
 // Create list items and add them to the conInclusionsList
 const conInclusionsListItem1 = document.createElement("li");
-conInclusionsListItem1.textContent = "Stay for a couple in an Executive or Deluxe Room";
+conInclusionsListItem1.textContent = getOfferData["offer_inclusion1"];
 conInclusionsList.appendChild(conInclusionsListItem1);
 
 const conInclusionsListItem2 = document.createElement("li");
-conInclusionsListItem2.textContent = "New Year's Eve Celebration - including DJ";
+conInclusionsListItem2.textContent = getOfferData["offer_inclusion2"];
 conInclusionsList.appendChild(conInclusionsListItem2);
 
 const conInclusionsListItem3 = document.createElement("li");
-conInclusionsListItem3.textContent = "Gala Dinner and Unlimited Cock";
+conInclusionsListItem3.textContent = "Breakfast free for the next day";
 conInclusionsList.appendChild(conInclusionsListItem3);
 
-const conInclusionsListItem4 = document.createElement("li");
-conInclusionsListItem4.textContent = "Breakfast the next day";
-conInclusionsList.appendChild(conInclusionsListItem4);
+// const conInclusionsListItem4 = document.createElement("li");
+// conInclusionsListItem4.textContent = "Breakfast free for the next day";
+// conInclusionsList.appendChild(conInclusionsListItem4);
 
 const paraDetails = document.createElement("p");
 paraDetails.textContent = "For more details, reach out to us at +1 8608171080";
@@ -348,8 +356,12 @@ const Termsul = document.createElement("ul");
 termsDiv.appendChild(Termsul);
 
 const Termsli1 = document.createElement("li");
-Termsli1.textContent = "New Year Resort packages are only for couples and families."
+Termsli1.textContent = getOfferData["terms_and_condition1"];
 Termsul.appendChild(Termsli1);
+
+const Termsli11 = document.createElement("li");
+Termsli11.textContent = getOfferData["terms_and_conditions2"];
+Termsul.appendChild(Termsli11);
 
 const Termsli2 = document.createElement("li");
 Termsli2.textContent = "This offer is available only on tickets booked on offers.globalfuncity.com";
