--- a/pages/shop/clothing.html
+++ b/pages/shop/clothing.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset='UTF-8'>
 	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
-    <title> Shop - Global Fun City</title>
+    <title> Shop - Clothing - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/store css/clothing.css" />
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
