feat: main js updated

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,7 @@
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title> Global Fun City </title>
+<script src="./main.js"></script>
 <link rel="stylesheet" href="./assets/css/style.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -273,7 +273,6 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	  document.getElementById("mySidenav").style.width = "0";
 	}
 	</script>
-
 
 	
 </body>
