--- a/pages/footer other pages/csrinitiatives.html
+++ b/pages/footer other pages/csrinitiatives.html
@@ -92,7 +92,7 @@
 <div class="about-c">
     <p>In today’s modern era, no company can survive without maintaining a healthy relationship with the society. Moreover, it is the duty of every business house to perform their role in nation building, which without the well being of society is not possible. Businesses make use of the resources of the society to earn their living, therefore, they are required to return enough to the society as well.</p>
 
-       <p> We as an entertainment provider, do understand this. Serving the society is our priority. Apart from providing marvelous fun to our people, enhancing their physical and mental well being out of their busy schedules, we are also involved in volunteering various cultural, social, nature oriented programs to perform our part towards the society.
+       <p> We, as an entertainment provider, do understand this. Serving society is our priority. Apart from providing marvellous fun to our people, enhancing their physical and mental well being out of their busy schedules, we are also involved in volunteering in various cultural, social, and nature-oriented programmes to perform our part towards the society.
         
         </p>
 </div>
@@ -110,10 +110,10 @@
 
 
 	<p> <b> <g> From the Director’s Desk- </g> </b> <br> <br>
-	    Global Fun City, one of the biggest Amusement parks in United States of America. <br>
+	    Global Fun City, one of the biggest amusement parks in the United States of America. <br>
 		<br>
-		As one of the successful growing entertainment industry in USA, I as a director of the company understand the importance of Corporate social responsibility. I believe that business should operate in such a manner that it meets or exceeds the ethical, legal, commercial, public expectations that society has towards us. We aim to resolve specific issues by supporting & improving conditions of our employees, shareholders, communities, and environment. But we also believe that moral responsibility goes further, reflecting the need for corporations to address fundamental ethical issues such as inclusion, dignity, and equality. The business should not only be about money. It should be about responsibility towards human development. It should be about public good, not just private good. I would like to thank our long standing guests for all their support and love, also looking forward to welcome our new guests. Hope we can make it a memorable experience for you and your family.
-		 <br>Last but not the least I would like to say -<g> Be The Peace You Wish To See In The World! </g>
+		As a director of one of the fastest growing industries in the entertainment industry in the United States, I recognise the significance of corporate social responsibility.I believe that business should operate in such a manner that it meets or exceeds the ethical, legal, commercial, and public expectations that society has towards us. We aim to resolve specific issues by supporting and improving the conditions of our employees, shareholders, communities, and environment. But we also believe that moral responsibility goes further, reflecting the need for corporations to address fundamental ethical issues such as inclusion, dignity, and equality. The business should not only be about money. It should be about responsibility towards human development. It should be about public good, not just private good. I would like to thank our longstanding guests for all their support and love, and I am also looking forward to welcoming our new guests. I hope we can make it a memorable experience for you and your family.
+		 <br>Last but not least, I would like to say,<g> Be the peace you wish to see in the world! </g>
 		<br>
 		<g>Thank you for your time.</g></p> 
 
