--- a/pages/signup for booking/signup.html
+++ b/pages/signup for booking/signup.html
@@ -81,7 +81,7 @@ const signIn = e => {
     else{
         localStorage.setItem("unique_id", JSON.stringify(email));
         alert("Welcome to the Global Fun City!");
-        location.href = "../homepage/index-profile.html";
+        location.href = "../../pages/homepage/index-profile.html";
     }
     e.preventDefault();
 }
