feat: update event

--- a/pages/other pages/events.html
+++ b/pages/other pages/events.html
@@ -289,7 +289,7 @@
 		festivelDiv.className = "festivel";
         
 		const event_path = window.location.origin;
-		const event_id = upcoming_event_details[i]["upcoming_event__uuid"];
+		const event_id = upcoming_event_details[i]["upcoming_event_uuid"];
 		const file_path_for_event = `${event_path}/pages/upcoming%20events/folklore_festivel.html?upcomingevents=`+event_id;
 
 		const festivalLink = document.createElement('a');
